# bas2wav

./: Cargo.toml  README.md  script
src/: main.rs  sound.rs
