[package]
name = "bas2wav"
version = "0.1.1"
edition = "2021"
description = "Convert AppleSoft BASIC source code into .wav file, for transfer to Apple II"
license = "MIT"
repository = "https://github.com/khollbach/bas2wav"

[dependencies]
a2kit = "2.4.1"
anyhow = "1.0.75"
hound = "3.5.1"
itertools = "0.11.0"
